Added bedside table lang, blockstate, obj, and mtl, added in various _s files for textures.

--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -9,6 +9,7 @@
   "block.tron_digitized.clu_throne": "Clu Throne",
   "block.tron_digitized.clu_throne_big": "Clu Throne Big",
   "subtitle.tron_digitized.block.clu_door": "Clu Door Opening",
-  "subtitle.tron_digitized.block.healing_chamber": "Healing Chamber Healing"
+  "subtitle.tron_digitized.block.healing_chamber": "Healing Chamber Healing",
+  "subtitle.tron_digitized.block.bedside": "Bedside Table"
 
 }
