--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -10,6 +10,6 @@
   "block.tron_digitized.clu_throne_big": "Clu Throne Big",
   "subtitle.tron_digitized.block.clu_door": "Clu Door Opening",
   "subtitle.tron_digitized.block.healing_chamber": "Healing Chamber Healing",
-  "subtitle.tron_digitized.block.bedside": "Bedside Table"
+  "block.tron_digitized.block.bedside": "Bedside Table"
 
 }
