--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -9,7 +9,9 @@
   "block.tron_digitized.clu_throne": "Clu Throne",
   "subtitle.tron_digitized.block.clu_door": "Clu Door Opening",
   "subtitle.tron_digitized.block.healing_chamber": "Healing Chamber Healing",
-  "block.tron_digitized.block.bedside": "Bedside Table",
-  "block.tron_digitized.block.kitchen_table": "Kitchen Table"
+  "block.tron_digitized.bedside": "Bedside Table",
+  "block.tron_digitized.kitchen_table": "Kitchen Table",
+  "block.tron_digitized.metal_table": "Metal Table",
+  "block.tron_digitized.quorras_dresser": "Quorras Dresser"
 
 }
