Added in White Table and Simple Glass Table.

--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -12,6 +12,8 @@
   "block.tron_digitized.bedside": "Bedside Table",
   "block.tron_digitized.kitchen_table": "Kitchen Table",
   "block.tron_digitized.metal_table": "Metal Table",
-  "block.tron_digitized.quorras_dresser": "Quorras Dresser"
+  "block.tron_digitized.quorras_dresser": "Quorras Dresser",
+  "block.tron_digitized.simple_glass_table": "Simple Glass Table",
+  "block.tron_digitized.white_table": "White Table"
 
 }
