Fixed the couch and bookshelf by adding in the item models etc

--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -14,6 +14,8 @@
   "block.tron_digitized.metal_table": "Metal Table",
   "block.tron_digitized.quorras_dresser": "Quorras Dresser",
   "block.tron_digitized.simple_glass_table": "Simple Glass Table",
-  "block.tron_digitized.white_table": "White Table"
+  "block.tron_digitized.bookshelf": "Bookshelf",
+  "block.tron_digitized.white_table": "White Table",
+  "block.tron_digitized.black_couch": "Black Couch"
 
 }
