Fixed clu stairs radius and height and opening speed

--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -20,5 +20,6 @@
   "block.tron_digitized.bookshelf2": "Bookshelf 2",
   "block.tron_digitized.bookshelf3": "Bookshelf 3",
   "block.tron_digitized.bookshelf_end": "Bookshelf End",
-  "block.tron_digitized.bookshelf_end2": "Bookshelf End 2"
+  "block.tron_digitized.bookshelf_end2": "Bookshelf End 2",
+  "block.tron_digitized.clu_stairs": "Clu Stairs"
 }
