Added Clu Back Door in needs fixing will fix later IntelliJ crashed I need to reinstall it won't read the mixin file

--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -22,5 +22,6 @@
   "block.tron_digitized.bookshelf_end": "Bookshelf End",
   "block.tron_digitized.bookshelf_end2": "Bookshelf End 2",
   "block.tron_digitized.clu_stairs": "Clu Stairs",
-  "block.tron_digitized.flynn_lamp": "Flynn Lamp"
+  "block.tron_digitized.flynn_lamp": "Flynn Lamp",
+  "block.tron_digitized.clu_back_door": "Clu Back Door"
 }
