added bookshelf sound

--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -24,5 +24,6 @@
   "block.tron_digitized.clu_stairs": "Clu Stairs",
   "block.tron_digitized.flynn_lamp": "Flynn Lamp",
   "block.tron_digitized.clu_back_door": "Clu Back Door",
-  "block.tron_digitized.clu_back_stairs": "Clu Back Stairs"
+  "block.tron_digitized.clu_back_stairs": "Clu Back Stairs",
+  "subtitle.tron_digitized.block.bookshelf": "Bookshelf Flip Page"
 }
