--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -26,5 +26,6 @@
   "block.tron_digitized.clu_back_door": "Clu Back Door",
   "block.tron_digitized.clu_back_stairs": "Clu Back Stairs",
   "subtitle.tron_digitized.block.bookshelf": "Bookshelf Flip Page",
-  "block.tron_digitized.fireplace": "Fireplace"
+  "block.tron_digitized.fireplace": "Fireplace",
+  "block.tron_digitized.chand_on": "Chandelier"
 }
