Added Clu Interface

--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -27,5 +27,6 @@
   "block.tron_digitized.clu_back_stairs": "Clu Back Stairs",
   "subtitle.tron_digitized.block.bookshelf": "Bookshelf Flip Page",
   "block.tron_digitized.fireplace": "Fireplace",
-  "block.tron_digitized.chand_on": "Chandelier"
+  "block.tron_digitized.chand_on": "Chandelier",
+  "block.tron_digitized.clu_interface": "Clu Interface"
 }
