Added portal pad in and portal bridge pieces into obj's

--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -39,5 +39,6 @@
   "block.tron_digitized.server_red_top": "Server Red Top",
   "block.tron_digitized.server_top": "Server Top",
   "block.tron_digitized.clu_little_window": "Clu Little Window",
-  "block.tron_digitized.clu_little_window_upsidedown": "Clu Little Window Upsidedown"
+  "block.tron_digitized.clu_little_window_upsidedown": "Clu Little Window Upsidedown",
+  "block.tron_digitized.portal_pad": "Portal Pad"
 }
