Added in first screen for interface

--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -47,5 +47,6 @@
   "block.tron_digitized.infinitas": "Infinitas Graffiti",
   "block.tron_digitized.tronlives": "Tron Lives Graffiti",
   "block.tron_digitized.curtain": "Curtain",
-  "block.tron_digitized.curtain2": "Curtain Right"
+  "block.tron_digitized.curtain2": "Curtain Right",
+  "block.tron_digitized.screen": "Screen"
 }
