--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -48,5 +48,6 @@
   "block.tron_digitized.tronlives": "Tron Lives Graffiti",
   "block.tron_digitized.curtain": "Curtain",
   "block.tron_digitized.curtain2": "Curtain Right",
-  "block.tron_digitized.screen": "Screen"
+  "block.tron_digitized.screen": "Screen",
+  "block.tron_digitized.world": "World"
 }
