--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -49,5 +49,6 @@
   "block.tron_digitized.curtain": "Curtain",
   "block.tron_digitized.curtain2": "Curtain Right",
   "block.tron_digitized.screen": "Screen",
-  "block.tron_digitized.world": "World"
+  "block.tron_digitized.world": "World",
+  "block.tron_digitized.screen2": "Screen 2"
 }
