Added Clu World in

--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -50,5 +50,6 @@
   "block.tron_digitized.curtain2": "Curtain Right",
   "block.tron_digitized.screen": "Screen",
   "block.tron_digitized.world": "World",
-  "block.tron_digitized.screen2": "Screen 2"
+  "block.tron_digitized.screen2": "Screen 2",
+  "block.tron_digitized.clu_world": "Clu World"
 }
