Added in screen3 and screen4

--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -51,5 +51,7 @@
   "block.tron_digitized.screen": "Screen",
   "block.tron_digitized.world": "World",
   "block.tron_digitized.screen2": "Screen 2",
-  "block.tron_digitized.clu_world": "Clu World"
+  "block.tron_digitized.clu_world": "Clu World",
+  "block.tron_digitized.screen3": "Screen 3",
+  "block.tron_digitized.screen4": "Screen 4"
 }
