--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -53,5 +53,6 @@
   "block.tron_digitized.clu_world": "Clu World",
   "block.tron_digitized.portal_bridge": "Portal Bridge",
   "block.tron_digitized.portal_bridge3": "Portal Bridge 3",
-  "block.tron_digitized.portal_bridge4": "Portal Bridge 4"
+  "block.tron_digitized.portal_bridge4": "Portal Bridge 4",
+  "block.tron_digitized.clu_glow_wall": "Clu Glow Wall"
 }
