Added in the beds and white door to the lang file

--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -54,5 +54,8 @@
   "block.tron_digitized.portal_bridge": "Portal Bridge",
   "block.tron_digitized.portal_bridge3": "Portal Bridge 3",
   "block.tron_digitized.portal_bridge4": "Portal Bridge 4",
-  "block.tron_digitized.clu_glow_wall": "Clu Glow Wall"
+  "block.tron_digitized.clu_glow_wall": "Clu Glow Wall",
+  "block.tron_digitized.white_door": "White Door",
+  "block.tron_digitized.flynns_bed": "Flynn's Bed",
+  "block.tron_digitized.black_bed": "Black Bed"
 }
