Added white table 2

--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -58,5 +58,6 @@
   "block.tron_digitized.clu_glow_wall": "Clu Glow Wall",
   "block.tron_digitized.white_door": "White Door",
   "block.tron_digitized.flynns_bed": "Flynn's Bed",
-  "block.tron_digitized.black_bed": "Black Bed"
+  "block.tron_digitized.black_bed": "Black Bed",
+  "block.tron_digitized.white_table_2": "White Table 2"
 }
