Added in a non light block version of Clu Glow Wall

--- a/src/main/resources/assets/tron_digitized/lang/en_us.json
+++ b/src/main/resources/assets/tron_digitized/lang/en_us.json
@@ -22,6 +22,7 @@
   "block.tron_digitized.bookshelf_end": "Bookshelf End",
   "block.tron_digitized.bookshelf_end2": "Bookshelf End 2",
   "block.tron_digitized.clu_stairs": "Clu Stairs",
+  "block.tron_digitized.clu_glow_wall2": "Clu Glow Wall 2",
   "block.tron_digitized.flynn_lamp": "Flynn Lamp",
   "block.tron_digitized.clu_back_door": "Clu Back Door",
   "block.tron_digitized.clu_back_stairs": "Clu Back Stairs",
